--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ Thumbs.db
 # /
 /*_fifo
 /*.exe
+/*.lib
+/*.exp
 /*.exe.*
 /*.ilk
 /*.iobj
@@ -175,3 +177,4 @@ __pycache__
 
 # Other
 /src/*/*.aps
+/db/cache
