--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -802,6 +802,8 @@ Body:
   Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线摆摊的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售物品.\n"
 - Original: "Done reading %s.\n"
   Translation: "已读取 %s.\n"
+- Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]' (took %[{PRIu64}] milliseconds)[{CL_CLL}]\n"
+  Translation: "已读取 [{CL_WHITE}]%-5[{PRIu64}][{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]' (耗时 %[{PRIu64}] 毫秒)[{CL_CLL}]\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5[{PRIu64}][{CL_RESET}] 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -824,6 +826,8 @@ Body:
   Translation: "已读取 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%u[{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5u[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading [{CL_WHITE}]%s[{CL_RESET}] from blast cache, took %[{PRIu64}] milliseconds...\n"
+  Translation: "已读取 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存 (耗时 %[{PRIu64}] 毫秒)...\n"
 - Original: "Done reading [{CL_WHITE}]'%d'[{CL_RESET}] messages in [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 条信息, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Drops has no Item value specified, skipping.\n"
@@ -1186,6 +1190,8 @@ Body:
   Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "已读取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
+  Translation: "正在加载 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在加载地图 (使用 %s 中的地图缓存)...\n"
 - Original: "Loading maps (using GRF files)...\n"
@@ -1736,6 +1742,8 @@ Body:
   Translation: ""
 - Original: "Terminating...\n"
   Translation: "正在结束...\n"
+- Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "地图服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The No.%d parameter (%s) can not be found.\n"
   Translation: ""
 - Original: "The No.%d parameter (%s) is not integer type.\n"
@@ -1748,12 +1756,16 @@ Body:
   Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d).\n\n"
+- Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "内部通讯账号密码通常设置在 map_athena.conf 和 char_athena.conf 文件中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[{CL_CYAN}][选择][{CL_RESET}]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
+- Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "服务器之间的内部通讯账号密码 (默认是: s1/p1) 可能是无效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
