--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -802,6 +802,8 @@ Body:
   Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線擺攤的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個在售物品.\n"
 - Original: "Done reading %s.\n"
   Translation: "已讀取 %s.\n"
+- Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]' (took %[{PRIu64}] milliseconds)[{CL_CLL}]\n"
+  Translation: "已讀取 [{CL_WHITE}]%-5[{PRIu64}][{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]' (耗時 %[{PRIu64}] 毫秒)[{CL_CLL}]\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5[{PRIu64}][{CL_RESET}] 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -824,6 +826,8 @@ Body:
   Translation: "已讀取 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%u[{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5u[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading [{CL_WHITE}]%s[{CL_RESET}] from blast cache, took %[{PRIu64}] milliseconds...\n"
+  Translation: "已讀取 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取 (耗時 %[{PRIu64}] 毫秒)...\n"
 - Original: "Done reading [{CL_WHITE}]'%d'[{CL_RESET}] messages in [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 條資訊, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Drops has no Item value specified, skipping.\n"
@@ -1186,6 +1190,8 @@ Body:
   Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "已讀取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
+  Translation: "正在載入 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在載入地圖 (使用 %s 中的地圖快取)...\n"
 - Original: "Loading maps (using GRF files)...\n"
@@ -1736,6 +1742,8 @@ Body:
   Translation: ""
 - Original: "Terminating...\n"
   Translation: "正在結束...\n"
+- Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "地圖伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The No.%d parameter (%s) can not be found.\n"
   Translation: ""
 - Original: "The No.%d parameter (%s) is not integer type.\n"
@@ -1748,12 +1756,16 @@ Body:
   Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d).\n\n"
+- Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋它? 這是最後一次確認. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
+- Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
