--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -761,11 +761,11 @@ Body:
 - Original: "Database type mismatch: %s != %s.\n"
   Translation: ""
 - Original: "Database version %hu is not supported anymore. Minimum version is: %hu\n"
-  Translation: ""
+  Translation: "資料庫版本號 %hu 已經不被支援. 當前支援的最小版本號是: %hu\n"
 - Original: "Database version %hu is not supported. Maximum version is: %hu\n"
-  Translation: ""
+  Translation: "資料庫版本號 %hu 已經不被支援. 當前支援的最大版本號是: %hu\n"
 - Original: "Database version %hu is outdated and should be updated. Current version is: %hu\n"
-  Translation: ""
+  Translation: "資料庫版本號 %hu 已經過時且必須更新. 當前支援的最小版本號是: %hu\n"
 - Original: "Default map: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
   Translation: "當玩家在無效的地圖登入時, 會被送到: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
 - Original: "Defaulting to %s as our IP address\n"
@@ -897,7 +897,7 @@ Body:
 - Original: "Failed to save inventory/cart/storage data (AID: %d, type: %d).\n"
   Translation: ""
 - Original: "Failed to verify compatibility with %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "已經不再相容 %s 資料庫檔案的當前版本, 位於: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Failed to write '%s'.\n"
   Translation: ""
 - Original: "Failure when opening map cache file %s\n"
@@ -1195,15 +1195,15 @@ Body:
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在載入地圖 (使用 %s 中的地圖快取)...\n"
 - Original: "Loading maps (using GRF files)...\n"
-  Translation: ""
+  Translation: "正在載入地圖 (使用 GRF 檔案中的地圖快取)...\n"
 - Original: "Loading maps [%i/%i]: %s[{CL_CLL}]\r"
   Translation: "正在載入地圖 [%i/%i]: %s[{CL_CLL}]\r"
 - Original: "Loading pet (%d)...\n"
-  Translation: ""
+  Translation: "正在載入寵物資料 (寵物編號: %d)...\n"
 - Original: "Loading storage for AID=%d.\n"
-  Translation: ""
+  Translation: "正在載入倉庫資料 (賬號編號: %d)...\n"
 - Original: "Log configuration file not found at: %s\n"
-  Translation: ""
+  Translation: "日誌配置檔案無法從指定路徑尋得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
   Translation: "使用 'logmes' 指令碼指令所記錄的資訊會被存放到 %s '%s'.\n"
 - Original: "Logging Cash transactions to %s '%s'.\n"
@@ -1232,6 +1232,8 @@ Body:
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
   Translation: ""
+- Original: "Map \"%s\" not found.\n"
+  Translation: "找不到名為 \"%s\" 的地圖, 請檢查是否輸入錯誤.\n"
 - Original: "Map %s already loaded![{CL_CLL}]\n"
   Translation: ""
 - Original: "Map %s is not a valid map, skipping.\n"
@@ -1253,7 +1255,7 @@ Body:
 - Original: "Map Server is now online.\n"
   Translation: "地圖伺服器已上線, 玩家可以登入遊戲了.\n"
 - Original: "Map configuration file not found at: %s\n"
-  Translation: ""
+  Translation: "地圖配置檔案無法從指定路徑尋得: %s\n"
 - Original: "Map name '%s' size '%[{PRIuPTR}]' is too long. Truncating to '%d'.\n"
   Translation: ""
 - Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
@@ -1263,7 +1265,7 @@ Body:
 - Original: "Map-server #%d has disconnected.\n"
   Translation: "地圖伺服器 %d 已斷開連線.\n"
 - Original: "Map-server %d has NO maps.\n"
-  Translation: ""
+  Translation: "地圖伺服器 %d 沒有任何地圖.\n"
 - Original: "Map-server %d loading complete.\n"
   Translation: "地圖伺服器 %d 已載入完畢.\n"
 - Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -1388,10 +1390,14 @@ Body:
   Translation: "檢測到本機擁有多張網絡卡, 使用 %s 作為我們預設的 IP 地址\n"
 - Original: "Multiple interfaces detected...\n"
   Translation: "檢測到本機擁有多張網絡卡...\n"
+- Original: "Musical instruments are always male-only, defaulting to SEX_MALE.\n"
+  Translation: "樂器只能給男性角色使用, 強制將其性別限制調整為 SEX_MALE.\n"
 - Original: "MySQL has been unreachable for too long, %d reconnects were attempted. Shutting Down\n"
   Translation: ""
 - Original: "NPC event parameter deprecated! Please use 'NPCNAME::OnEVENT' instead of '%s'.\n"
   Translation: ""
+- Original: "NPC file '[{CL_WHITE}]%s[{CL_RESET}]' was loaded.\n"
+  Translation: "已載入指令碼檔案 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "NPC file '[{CL_WHITE}]%s[{CL_RESET}]' was reloaded.\n"
   Translation: "已重新載入指令碼檔案 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "NPCEvent '%s' not found! (source: %s)\n"
@@ -1932,6 +1938,8 @@ Body:
   Translation: ""
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
+- Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
+  Translation: "鞭子只能給女性角色使用, 強制將其性別限制調整為 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -3002,6 +3010,10 @@ Body:
   Translation: ""
 - Original: "buildin_warpportal: Target map not found %s.\n"
   Translation: ""
+- Original: "builtin_npcshopadditem: Item ID %u does not exist.\n"
+  Translation: "builtin_npcshopadditem: 物品編號 %u 不存在於資料庫中.\n"
+- Original: "builtin_npcshopitem: Item ID %u does not exist.\n"
+  Translation: "builtin_npcshopitem: 物品編號 %u 不存在於資料庫中.\n"
 - Original: "buyingstore_create: Found duplicate item on buying list (nameid=%u, amount=%hu, account_id=%d, char_id=%d).\n"
   Translation: ""
 - Original: "buyingstore_reopen: (Error:%d) Load failed for autotrader '[{CL_WHITE}]%s[{CL_RESET}]' (CID=%/AID=%d)\n"
@@ -3152,6 +3164,12 @@ Body:
   Translation: ""
 - Original: "clif_process_message: Received malformed packet from player '%s' (packet length is incorrect)!\n"
   Translation: ""
+- Original: "clif_quest_string: Unsupported element %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支援的屬性型別: %d - 使用空字串...\n"
+- Original: "clif_quest_string: Unsupported race %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支援的種族型別: %d - 使用空字串...\n"
+- Original: "clif_quest_string: Unsupported size %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支援的體型型別: %d - 使用空字串...\n"
 - Original: "clif_ranklist: Unsupported ranking type '%d'. Please report this.\n"
   Translation: ""
 - Original: "clif_send: Unrecognized type %d\n"
