--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -761,11 +761,11 @@ Body:
 - Original: "Database type mismatch: %s != %s.\n"
   Translation: ""
 - Original: "Database version %hu is not supported anymore. Minimum version is: %hu\n"
-  Translation: ""
+  Translation: "数据库版本号 %hu 已经不被支持. 当前支持的最小版本号是: %hu\n"
 - Original: "Database version %hu is not supported. Maximum version is: %hu\n"
-  Translation: ""
+  Translation: "数据库版本号 %hu 已经不被支持. 当前支持的最大版本号是: %hu\n"
 - Original: "Database version %hu is outdated and should be updated. Current version is: %hu\n"
-  Translation: ""
+  Translation: "数据库版本号 %hu 已经过时且必须更新. 当前支持的最小版本号是: %hu\n"
 - Original: "Default map: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
   Translation: "当玩家在无效的地图登录时, 会被送到: '[{CL_WHITE}]%s %d,%d[{CL_RESET}]'\n"
 - Original: "Defaulting to %s as our IP address\n"
@@ -897,7 +897,7 @@ Body:
 - Original: "Failed to save inventory/cart/storage data (AID: %d, type: %d).\n"
   Translation: ""
 - Original: "Failed to verify compatibility with %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: ""
+  Translation: "已经不再兼容 %s 数据库文件的当前版本, 位于: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Failed to write '%s'.\n"
   Translation: ""
 - Original: "Failure when opening map cache file %s\n"
@@ -1195,15 +1195,15 @@ Body:
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在加载地图 (使用 %s 中的地图缓存)...\n"
 - Original: "Loading maps (using GRF files)...\n"
-  Translation: ""
+  Translation: "正在加载地图 (使用 GRF 文件中的地图缓存)...\n"
 - Original: "Loading maps [%i/%i]: %s[{CL_CLL}]\r"
   Translation: "正在加载地图 [%i/%i]: %s[{CL_CLL}]\r"
 - Original: "Loading pet (%d)...\n"
-  Translation: ""
+  Translation: "正在加载宠物数据 (宠物编号: %d)...\n"
 - Original: "Loading storage for AID=%d.\n"
-  Translation: ""
+  Translation: "正在加载仓库数据 (账号编号: %d)...\n"
 - Original: "Log configuration file not found at: %s\n"
-  Translation: ""
+  Translation: "日志配置文件无法从指定路径寻得: %s\n"
 - Original: "Logging 'logmes' messages to %s '%s'.\n"
   Translation: "使用 'logmes' 脚本指令所记录的信息会被存放到 %s '%s'.\n"
 - Original: "Logging Cash transactions to %s '%s'.\n"
@@ -1232,6 +1232,8 @@ Body:
   Translation: ""
 - Original: "MOB can't move. random spawn %d, class = %d, at %s (%d,%d)\n"
   Translation: ""
+- Original: "Map \"%s\" not found.\n"
+  Translation: "找不到名为 \"%s\" 的地图, 请检查是否输入错误.\n"
 - Original: "Map %s already loaded![{CL_CLL}]\n"
   Translation: ""
 - Original: "Map %s is not a valid map, skipping.\n"
@@ -1253,7 +1255,7 @@ Body:
 - Original: "Map Server is now online.\n"
   Translation: "地图服务器已上线, 玩家可以登录游戏了.\n"
 - Original: "Map configuration file not found at: %s\n"
-  Translation: ""
+  Translation: "地图配置文件无法从指定路径寻得: %s\n"
 - Original: "Map name '%s' size '%[{PRIuPTR}]' is too long. Truncating to '%d'.\n"
   Translation: ""
 - Original: "Map-Server %d connected: %[{PRIuPTR}] maps, from IP %d.%d.%d.%d port %d.\n"
@@ -1263,7 +1265,7 @@ Body:
 - Original: "Map-server #%d has disconnected.\n"
   Translation: "地图服务器 %d 已断开连接.\n"
 - Original: "Map-server %d has NO maps.\n"
-  Translation: ""
+  Translation: "地图服务器 %d 没有任何地图.\n"
 - Original: "Map-server %d loading complete.\n"
   Translation: "地图服务器 %d 已加载完毕.\n"
 - Original: "Map-server connected to char-server '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -1388,10 +1390,14 @@ Body:
   Translation: "检测到本机拥有多张网卡, 使用 %s 作为我们默认的 IP 地址\n"
 - Original: "Multiple interfaces detected...\n"
   Translation: "检测到本机拥有多张网卡...\n"
+- Original: "Musical instruments are always male-only, defaulting to SEX_MALE.\n"
+  Translation: "乐器只能给男性角色使用, 强制将其性别限制调整为 SEX_MALE.\n"
 - Original: "MySQL has been unreachable for too long, %d reconnects were attempted. Shutting Down\n"
   Translation: ""
 - Original: "NPC event parameter deprecated! Please use 'NPCNAME::OnEVENT' instead of '%s'.\n"
   Translation: ""
+- Original: "NPC file '[{CL_WHITE}]%s[{CL_RESET}]' was loaded.\n"
+  Translation: "已加载脚本文件 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "NPC file '[{CL_WHITE}]%s[{CL_RESET}]' was reloaded.\n"
   Translation: "已重新加载脚本文件 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "NPCEvent '%s' not found! (source: %s)\n"
@@ -1932,6 +1938,8 @@ Body:
   Translation: ""
 - Original: "Weapon is only applicable to Job sprites.\n"
   Translation: ""
+- Original: "Whips are always female-only, defaulting to SEX_FEMALE.\n"
+  Translation: "鞭子只能给女性角色使用, 强制将其性别限制调整为 SEX_FEMALE.\n"
 - Original: "Whisper event in npc '[{CL_WHITE}]%s[{CL_RESET}]' was ignored, because it's name is too long.\n"
   Translation: ""
 - Original: "You are running rAthena with admin privileges, it is not necessary.\n"
@@ -3002,6 +3010,10 @@ Body:
   Translation: ""
 - Original: "buildin_warpportal: Target map not found %s.\n"
   Translation: ""
+- Original: "builtin_npcshopadditem: Item ID %u does not exist.\n"
+  Translation: "builtin_npcshopadditem: 物品编号 %u 不存在于数据库中.\n"
+- Original: "builtin_npcshopitem: Item ID %u does not exist.\n"
+  Translation: "builtin_npcshopitem: 物品编号 %u 不存在于数据库中.\n"
 - Original: "buyingstore_create: Found duplicate item on buying list (nameid=%u, amount=%hu, account_id=%d, char_id=%d).\n"
   Translation: ""
 - Original: "buyingstore_reopen: (Error:%d) Load failed for autotrader '[{CL_WHITE}]%s[{CL_RESET}]' (CID=%/AID=%d)\n"
@@ -3152,6 +3164,12 @@ Body:
   Translation: ""
 - Original: "clif_process_message: Received malformed packet from player '%s' (packet length is incorrect)!\n"
   Translation: ""
+- Original: "clif_quest_string: Unsupported element %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支持的属性类型: %d - 使用空字符串...\n"
+- Original: "clif_quest_string: Unsupported race %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支持的种族类型: %d - 使用空字符串...\n"
+- Original: "clif_quest_string: Unsupported size %d - using empty string...\n"
+  Translation: "clif_quest_string: 不支持的体型类型: %d - 使用空字符串...\n"
 - Original: "clif_ranklist: Unsupported ranking type '%d'. Please report this.\n"
   Translation: ""
 - Original: "clif_send: Unrecognized type %d\n"
