修正编码错误, 优化 yaml2sql 辅助工具的使用流程

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -696,6 +696,8 @@ Body:
   Translation: ""
 - Original: "Constant Type %s is not a supported skill type.\n"
   Translation: ""
+- Original: "Converting %[{PRIdPTR}] items in '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "正在转换 %-5[{PRIdPTR}] 个物品, 源于: '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "CopyFlags RemoveRequirement %s is invalid.\n"
   Translation: ""
 - Original: "CopyFlags requires a Skill copy type.\n"
@@ -787,7 +789,7 @@ Body:
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "已成功转换 '[{CL_WHITE}]%d[{CL_RESET}]' 组数据到 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: "已转换 [{CL_WHITE}]%-5d[{CL_RESET}] 个物品, 源于: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
