--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -696,6 +696,8 @@ Body:
   Translation: ""
 - Original: "Constant Type %s is not a supported skill type.\n"
   Translation: ""
+- Original: "Converting %[{PRIdPTR}] items in '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+  Translation: "正在轉換 %-5[{PRIdPTR}] 個物品, 源於: '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "CopyFlags RemoveRequirement %s is invalid.\n"
   Translation: ""
 - Original: "CopyFlags requires a Skill copy type.\n"
@@ -787,7 +789,7 @@ Body:
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
 - Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-  Translation: "已成功轉換 '[{CL_WHITE}]%d[{CL_RESET}]' 組資料到 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: "已轉換 [{CL_WHITE}]%-5d[{CL_RESET}] 個物品, 源於: '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
