使游戏文本转译辅助脚本能处理 Yaml 版本的物品数据库

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -395,7 +395,7 @@ Body:
 - Original: "Account '%s' could not be created because client side password encryption is enabled.\n"
   Translation: ""
 - Original: "Account creation (account %s, id: %d, sex: %c)\n"
-  Translation: ""
+  Translation: "已有玩家建立新账号 (账号: %s, 账号编号: %d, 性别: %c)\n"
 - Original: "Account registration denied (registration limit exceeded)\n"
   Translation: ""
 - Original: "Additional Map %s is already listed as the EnterMap.\n"
@@ -433,9 +433,9 @@ Body:
 - Original: "AttackRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Attempt of creation of an already existant account (account: %s, sex: %c)\n"
-  Translation: ""
+  Translation: "有玩家尝试创建已经存在的账号 (账号: %s, 性别: %c)\n"
 - Original: "Attempt of creation of an contains special characters account (account: %s, sex: %c, ip: %s)\n"
-  Translation: ""
+  Translation: "有玩家尝试创建包含特殊字符的账号 (账号: %s, 性别: %c, IP地址: %s)\n"
 - Original: "Attempt to connect to login-server...\n"
   Translation: "尝试连接登录服务器...\n"
 - Original: "Attempting to connect to Char Server. Please wait.\n"
