--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -395,7 +395,7 @@ Body:
 - Original: "Account '%s' could not be created because client side password encryption is enabled.\n"
   Translation: ""
 - Original: "Account creation (account %s, id: %d, sex: %c)\n"
-  Translation: ""
+  Translation: "已有玩家建立新賬號 (賬號: %s, 賬號編號: %d, 性別: %c)\n"
 - Original: "Account registration denied (registration limit exceeded)\n"
   Translation: ""
 - Original: "Additional Map %s is already listed as the EnterMap.\n"
@@ -433,9 +433,9 @@ Body:
 - Original: "AttackRate %hu exceeds maximum of 10000. Capping...\n"
   Translation: ""
 - Original: "Attempt of creation of an already existant account (account: %s, sex: %c)\n"
-  Translation: ""
+  Translation: "有玩家嘗試建立已經存在的賬號 (賬號: %s, 性別: %c)\n"
 - Original: "Attempt of creation of an contains special characters account (account: %s, sex: %c, ip: %s)\n"
-  Translation: ""
+  Translation: "有玩家嘗試建立包含特殊字元的賬號 (賬號: %s, 性別: %c, IP地址: %s)\n"
 - Original: "Attempt to connect to login-server...\n"
   Translation: "嘗試連線登入伺服器...\n"
 - Original: "Attempting to connect to Char Server. Please wait.\n"
