--- a/src/tool/yaml2sql.vcxproj
+++ b/src/tool/yaml2sql.vcxproj
@@ -211,6 +211,8 @@
     <Delete Files="$(SolutionDir)zlib.dll" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)serv.bat" ContinueOnError="true" />
     <Delete Files="$(SolutionDir)yaml2sql.bat" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)yaml2sql-pre.exe" ContinueOnError="true" />
+    <Delete Files="$(SolutionDir)yaml2sql-pre.pdb" ContinueOnError="true" />
   </Target>
   <Target Name="AfterBuild">
     <Copy SourceFiles="$(SolutionDir)3rdparty\zlib\lib\$(Platform)\zlib.dll" DestinationFolder="$(SolutionDir)" ContinueOnError="true" Condition="!Exists('$(SolutionDir)zlib.dll')" />
