--- a/tools/python/Pipfile
+++ b/tools/python/Pipfile
@@ -14,6 +14,7 @@ chardet = "==3.0.4"
 gitpython = "==3.1.7"
 python-dotenv = "==0.14.0"
 PyYAML = "==5.3.1"
+"ruamel.yaml" = "*"
 
 [requires]
 python_version = "3"
