汉化 mail_return_empty 选项的注释

--- a/conf/char_athena.conf
+++ b/conf/char_athena.conf
@@ -472,8 +472,8 @@ mail_delete_days: 15
 // Default: yes
 mail_retrieve: yes
 
-// Should mails without any attachments be returned to their sender?
-// Default: yes
+// 没有附件的邮件是否需要退信给发送者?
+// 默认值为: yes
 mail_return_empty: yes
 
 import: conf/import/char_conf.txt
