汉化人工生命体自动喂食选项的注释

--- a/conf/battle/feature.conf
+++ b/conf/battle/feature.conf
@@ -104,8 +104,8 @@ feature.petautofeed: on
 // Default: 89
 feature.pet_autofeed_rate: 89
 
-// Homunculues Autofeeding (Note 1)
-// Requires: 2017-09-20bRagexeRE or later
+// 是否启用人工生命体自动喂食机制 (开关选项)
+// 此选项只有客户端版本大于等于 2017-09-20bRagexeRE 才支持.
 feature.homunculus_autofeed: on
 
 // At which rate should homunculus autofeeding trigger? (Note 2)
